; ModuleID = '/home/carl/AnghaBench/reactos/win32ss/drivers/displays/vga_new/extr_palette.c_bInitDefaultPalette.c'
source_filename = "/home/carl/AnghaBench/reactos/win32ss/drivers/displays/vga_new/extr_palette.c_bInitDefaultPalette.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32 }
%struct.TYPE_7__ = type { i32, i64, i32, i32, i32, %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i8*, i8*, i8*, i8* }
%struct.TYPE_9__ = type { i64 }

@PAL_INDEXED = common dso_local global i32 0, align 4
@logPalVGA = common dso_local global %struct.TYPE_10__ zeroinitializer, align 4
@.str = private unnamed_addr constant [50 x i8] c"DISP bInitDefaultPalette failed EngCreatePalette\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@ALLOC_TAG = common dso_local global i32 0, align 4
@BASEPALETTE = common dso_local global i8** null, align 8
@PAL_BITFIELDS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @bInitDefaultPalette(%struct.TYPE_7__* %0, %struct.TYPE_9__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_7__*, align 8
  %5 = alloca %struct.TYPE_9__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %4, align 8
  store %struct.TYPE_9__* %1, %struct.TYPE_9__** %5, align 8
  %6 = load i32, i32* @PAL_INDEXED, align 4
  %7 = call i8* @EngCreatePalette(i32 %6, i32 16, i32 ptrtoint (%struct.TYPE_10__* @logPalVGA to i32), i32 0, i32 0, i32 0)
  %8 = ptrtoint i8* %7 to i64
  %9 = load %struct.TYPE_9__*, %struct.TYPE_9__** %5, align 8
  %10 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %9, i32 0, i32 0
  store i64 %8, i64* %10, align 8
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %11, i32 0, i32 1
  store i64 %8, i64* %12, align 8
  %13 = load %struct.TYPE_7__*, %struct.TYPE_7__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = icmp eq i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %2
  %18 = call i32 @RIP(i8* getelementptr inbounds ([50 x i8], [50 x i8]* @.str, i64 0, i64 0))
  %19 = load i32, i32* @FALSE, align 4
  store i32 %19, i32* %3, align 4
  br label %22

20:                                               ; preds = %2
  %21 = load i32, i32* @TRUE, align 4
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %20, %17
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i8* @EngCreatePalette(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @RIP(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
